# relevant-search-book

./: .pre-commit-config.yaml  docker-compose.yml  export_tmdb.py  pyproject.toml  reindex.py  settings.toml
.github/workflows/: static.yml  test.yml
src/: export_tmdb.py  reindex.py  utils.py
tests/: test_export_tmdb.py  test_reindex.py
tests/fixtures/: exported_movies.json
