[tool.poetry]
name = "relevant-search-book"
version = "0.1.0"
description = ""
authors = ["Pavel Vergeev <vernier_06_curios@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
dynaconf = "^3.1.7"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
respx = "^0.19.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pycln]
all = true

[tool.isort]
profile = "black"
